# frog_perch

./: .gitignore  README.md  model_comparison_20251119_064005.json  model_comparison_20251119_124723.json  model_comparison_20251119_143629.json  nn_train.py  pyproject.toml  run_bulk_feature_extraction.py  run_calibration_pipeline.py  run_rapid_map_test.py  run_stat_model.py  run_stat_model_map.py  train_batch.csv  val_batch.csv
configs/: call_intensity_splines_rainfall.yaml  nn_config.py  normalization.yaml
experiments/: aggregate_slice_config.py  aggregate_slice_csvs.py  get_label_stats.py  infer_directory.py  infer_slice_directory.py  logistic_sweep.py  logistic_sweep_helpers.py  sweep_controller.py
experiments/nn_calibration/: calibration_exploration_vis.py  evaluate_nn_outputs.py  visualize_calibration.py  visualize_calibration_2.py  visualize_calibration_comprehensive.py  visualize_calibration_saturation.py  visualize_nn_outputs.py
experiments/nn_eval/: val_suite.py
experiments/visualize_stat_model/: visualize_results_numpyro.py  visualize_results_numpyro_rain.py  visualize_results_numpyro_rain_climate.py
old/scripts/experiments_and_diagnostics/: compare_models.py  daily_intensity.py  daily_intensity_config.py  histograms_from_raven_annotations_2.py  hourly_intensity.py  hourly_intensity_config.py  infer_config.py  infer_directory.py  infer_slice_config.py  sanity_check_dataset.py  sweep_worker.py  test_embedding_equivalence.py  validate_model.py  visualize_transformation.py
old/stat_models/inference/: analyze_gp_windowed.py  analyze_hsgp.py  analyze_spline.py  analyze_spline_windowed.py  (+11 more)
src/frog_perch/: __init__.py  config.py  main.py
(+86 files in other folders)
