[project]
name = "frog-perch"
version = "0.1.0"
description = "Frog call detection and training utilities"
readme = "README.md"
authors = [
    { name = "Brendan Allison", email = "brendanwallison@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "librosa",
    "tensorflow>=2.17",
    "pandas",
    "kagglehub"
]

[project.scripts]
frog-perch = "frog_perch:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black",
]
