[project]
name = "frog-perch"
version = "0.1.0"
description = "Frog call detection and training utilities"
readme = "README.md"
authors = [
    { name = "Brendan Allison", email = "brendanwallison@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "librosa",
    "tensorflow>=2.17",
    "pandas",
    "kagglehub",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "cmdstanpy>=1.3.0",
    "statsmodels>=0.14.6",
    "keras>=3.14.1",
    "interpax[cuda13-pip]==0.3.14",
    "numpyro[cuda13-pip]>=0.20.0",
    "jax[cuda13-pip]>=0.4.38",
    "jaxlib[cuda13-pip]>=0.4.38",
    "equinox>=0.11.11",
    "arviz>=1.2.0",
    "h5netcdf>=1.8.1",
    "netcdf4>=1.7.4",
]

[project.scripts]
frog-perch = "frog_perch:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black",
]
